# web_sample

./: Makefile  README.md  compose.yaml  docker-compose.yml
db/: servers.json
db/init-scripts/: create_users_table.sql
html-app/: Dockerfile  nginx.conf
html-app/src/: index.html  index.js
nestjs-app/: Dockerfile  package-lock.json  package.json  run.sh  test.sh
nestjs-app/src/: app.module.ts  authenticated.guard.ts  main.ts
nestjs-app/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  local.strategy.ts  session.serializer.ts
nestjs-app/src/common/filters/: http-exception.filter.ts
nestjs-app/src/main/: main.controller.spec.ts  main.controller.ts  main.module.ts  main.service.ts
nestjs-app/src/user/: user.entity.ts  user.service.ts
nginx/: Dockerfile  nginx.conf
node-app/: Dockerfile
node-app/src/: index.js  package-lock.json  package.json  run.sh
perl-app/: .gitignore  Dockerfile  hypnotoad.conf
perl-app/src/: index.pl  run.sh
php-app/: .env  .env.example  Dockerfile  run.sh
php-app/app/Http/Controllers/: LoginController.php  MainController.php
php-app/app/Models/: User.php
php-app/bootstrap/: app.php
php-app/config/: auth.php  logging.php
php-app/routes/: api.php
python-app/: Dockerfile  index.py  pyproject.toml  requirements.txt  run.sh  session_manager.py
python-app/app/: index.py
python-app/app/db/: database.py
python-app/db/: database.py  users.py
view-app/: Dockerfile  nginx.conf
view-app/src/: index.html  index.js  main.html  main.js  test.html  test.js
(+1 files in other folders)
